force-app/main/default/objects/FEC_Channel__c/fields/FEC_Cancel_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Cancel_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Case</label>
    <type>Checkbox</type>
</CustomField>