force-app/main/default/objects/FEC_Channel__c/fields/FEC_Channel_English_name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel_English_name__c</fullName>
    <label>Channel English Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>