force-app/main/default/objects/FEC_Channel__c/fields/FEC_Get_Nature_Of_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Get_Nature_Of_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Nature Of Case</label>
    <type>Checkbox</type>
</CustomField>