force-app/main/default/objects/FEC_Channel__c/fields/FEC_Is_In_Create_new_mode__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_In_Create_new_mode__c</fullName>
    <formula>IF(NOT(ISBLANK(Id)) , FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is In Create new mode</label>
    <type>Checkbox</type>
</CustomField>