force-app/main/default/objects/FEC_Channel__c/fields/FEC_Link_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Link_Channel_ID__c</fullName>
    <formula>HYPERLINK(
    &quot;/lightning/r/FEC_Channel__c/&quot; &amp;  Id &amp; &quot;/view&quot;,
     FEC_Channel_ID__c,
     &apos;_self&apos;
)</formula>
    <label>Channel ID</label>
    <type>Text</type>
</CustomField>