force-app/main/default/objects/FEC_Channel__c/fields/FEC_Update_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Update_Case_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Case Status</label>
    <type>Checkbox</type>
</CustomField>